# upod

./: .gitignore  Cargo.toml  build.sh  docker.py  lifecycle.py  test_bollard.rs
resources/crun/: crun-linux-amd64
resources/crun/arm/: crun
src/: config.rs  main.rs
src/business/: mod.rs
src/business/workspace_tag/: mod.rs  tag_handler.rs
src/core/: constants.rs  mod.rs
src/image/: mod.rs
src/models/: context.rs  mod.rs
src/runtime/: container.rs  image_pull.rs  image_unpack.rs  mod.rs  runtime.rs
src/utils/: mod.rs  system_env.rs
src/web/: r.rs  ts_str.rs
upod-app/: Cargo.toml  build.sh  upod.apifox.json
upod-app/resources/: application.toml
upod-app/resources/locales/: en.toml  zh.toml
upod-app/src/: config.rs  main.rs  proxy.rs  routes.rs
upod-app/src/core/: code.rs  mod.rs
upod-app/src/handler/: create_sandbox.rs  delete_sandbox.rs  docker.rs  get_sandbox.rs  get_sandbox_endpoint.rs  list_sandbox.rs  mod.rs  sandbox_lifecycle.rs  sandbox_management.rs
upod-app/src/models/: context.rs  mod.rs  sandbox.rs
upod-app/src/service/: bridge_binary.rs  create_sandbox.rs  delete_sandbox.rs  get_sandbox.rs  get_sandbox_endpoint.rs  list_sandboxes.rs  mod.rs  pause_sandbox.rs  resume_sandbox.rs  sandbox_lifecycle.rs  sandbox_store.rs
upod-app/src/utils/: id.rs  mod.rs  port.rs  resource_limits.rs
upod-app/src/web/: error.rs  extract.rs  mod.rs  server.rs
upod-app/src/web/middleware/: fallback.rs  mod.rs
upod-base/: Cargo.toml
upod-base/src/: lib.rs
upod-base/src/core/: code.rs
upod-base/src/web/: mod.rs  r.rs
upod-bridge/: Cargo.toml  bridge.apifox.json  build.sh
upod-bridge/src/: main.rs  routes.rs
upod-bridge/src/api/: metrics.rs
upod-bridge/src/api/command/: command_exec.rs  command_session.rs
upod-bridge/src/api/filesystem/: directory_transfer.rs  file_operations.rs  file_transfer.rs  mod.rs
upod-bridge/src/core/: code.rs
upod-bridge/src/models/: filesystem.rs  metrics.rs  mod.rs
upod-cli/: Cargo.toml
upod-cli/src/: client.rs  command.rs  error.rs  filesystem.rs  lib.rs  sandbox.rs
upod-cli/src/models/: command.rs  filesystem.rs  mod.rs  sandbox.rs
upod-cli/tests/: command_test.rs  filesystem_test.rs  sandbox_test.rs
upod-exec/: Cargo.toml  exec.apifox.json
upod-exec/src/: main.rs  routes.rs
upod-exec/src/api/: mod.rs
upod-exec/src/api/command/: command_exec.rs  command_log.rs  command_status.rs  mod.rs
upod-exec/src/models/: command.rs
upod-proxy/: Cargo.toml
upod-proxy/src/: lib.rs
upod-sandbox/: Cargo.toml
upod-sandbox/src/: lib.rs
upod-sandbox/src/handler/: create_sandbox.rs  delete_sandbox.rs  docker.rs  get_sandbox.rs  get_sandbox_endpoint.rs  list_sandbox.rs  mod.rs  sandbox_lifecycle.rs
upod-sandbox/src/models/: mod.rs  sandbox.rs
