[package]
name = "upod-app"
version = "0.1.0"
edition = "2024"
description = "AI沙箱基础设施"
license = "Apache-2.0"
repository = "https://github.com/uporm/upod"

[[bin]]
name = "upod"
path = "src/main.rs"

[profile.dev]
debug = 0

[dependencies]
## 一方包
upod-base = { path = "../upod-base" }

## 二方包
rivus-logger = "0.5.2"

## 三方包
axum = { version = "0.8.8", features = ["multipart"] }
tracing = "0.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_qs = { version = "1.0.0", features = ["axum"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
rust-i18n = "3.1.5"
thiserror = "2.0.18"
validator = "0.20.0"
config = "0.15.19"
dotenvy = "0.15.7"
futures-util = "0.3.32"
chrono = { version = "0.4.38", features = ["serde"] }
nanoid = "0.4.0"
bollard = "0.20.2"
pingora = { version = "0.8.0", features = ["proxy"] }
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
tar = "0.4.44"
