[package]
name = "upod-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json", "multipart"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.8"
