[package]
name = "upod-exec"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "upod-exec"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
nix = { version = "0.31.2", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "fs"] }
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }
