[package]
name = "upod-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.20.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_qs = { version = "1.0.0", features = ["axum"] }
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
upod-base = { path = "../upod-base", version = "0.1.0" }
futures-util = "0.3.32"
chrono = { version = "0.4.38", features = ["serde"] }
nanoid = "0.4.0"
